# math-lib

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/math-core/: Cargo.toml
crates/math-core/src/: error.rs  lib.rs  tolerance.rs  traits.rs  validate.rs
crates/math-graph/: Cargo.toml
crates/math-graph/src/: lib.rs
crates/math-lib/: Cargo.toml
crates/math-lib/examples/: dijkstra.rs  histogram.rs  matrix_operations.rs  plot_function.rs  regression.rs  root_finding.rs  solve_system.rs
crates/math-lib/src/: lib.rs
crates/math-lib/tests/: integration.rs
crates/math-linalg/: Cargo.toml
crates/math-linalg/src/: lib.rs  matrix.rs  vector.rs
crates/math-numerics/: Cargo.toml
crates/math-numerics/src/: differentiation.rs  integration.rs  interpolation.rs  lib.rs  ode.rs  root.rs
crates/math-plot/: Cargo.toml
crates/math-plot/src/: lib.rs
crates/math-stats/: Cargo.toml
crates/math-stats/src/: descriptive.rs  distributions.rs  inference.rs  lib.rs  special.rs
