[package]
name = "math-plot"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
png = ["dep:image"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
math-core.workspace = true
